<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mdc" />

        <RadioButton
            android:id="@+id/radioButtonGost3411"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411" />

        <RadioButton
            android:id="@+id/radioButtonGost3411_2012_256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411_2012_256" />

        <RadioButton
            android:id="@+id/radioButtonGost3411_2012_512"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411_2012_512" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mac" />

        <RadioButton
            android:id="@+id/radioButtonMacGost28147_89"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost28147_cmac" />

        <RadioButton
            android:id="@+id/radioButtonMacGost3411"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411_hmac" />

        <RadioButton
            android:id="@+id/radioButtonMacGost3411_2012_256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411_2012_256_hmac" />

        <RadioButton
            android:id="@+id/radioButtonMacGost3411_2012_512"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3411_2012_512_hmac" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/encryption" />

        <RadioButton
            android:id="@+id/radioButtonGost28147_89"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost28147" />

        <RadioButton
            android:id="@+id/radioButtonGost3412_2015"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gost3412_2015" />

    </RadioGroup>
</LinearLayout>